--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </tr>
         </table>
         
-        <hr size="2" noshade>
+        <hr size="2" noshade> <br>
 
         <h3>Things I wear as a badge of honour</h3>
          <ul>
