--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             </tr>
         </table>
         
-        <hr size="2" noshade> <br>
-
+        <hr size="2" noshade> 
+        <br>
         <h3>Things I wear as a badge of honour</h3>
          <ul>
              <li><a href="https://twitter.com/xxliveyourlife/status/985194612552818689?lang=he">Being Amy's husband </a></li>
