--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         
         <br>
 
-        <h3>Ah, finally, my skills</h3>
+        <h3>Finally, my skills</h3>
         <table cellspacing="10">
             </tr>
             <tr>
